add padding and section margin

--- a/src/front-end/src/styles/main.css
+++ b/src/front-end/src/styles/main.css
@@ -5,7 +5,7 @@ body,
 #app {
   height: 100%;
   margin: 0;
-  padding: 0;
+  padding: 10px;
 }
 
 html.dark {
@@ -26,4 +26,8 @@ html.dark {
   left: 0;
   width: 100%;
   height: 2px;
+}
+
+section.content {
+  margin-bottom: 20px;
 }
